--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,20 @@ td {
 }
 
 .button-play {
-    padding: 5px;
+    padding: 5px 20px 5px 20px;
     background-color: #EDFEF6;
     color: #142D27;
     cursor: pointer;
     text-align: center;
-    border-radius: 5%;
-    border: 1px solid #142D27;
+    border-radius: 10%;
+    border: 1px solid #3CB371;
+    font-family: 'Lato', sans-serif;
+}
+
+input {
+	background-color: #EDFEF6;
+    color: #142D27;
+    border: 1px solid #3CB371;
 }
 
 .play2 {
